# Medical-Records-Solana-

./: Anchor.toml  README.md  auth.js  encryption.js  extract.js  getAuthorities.js  getPDA.js  inspect-transaction.js  key.json  keypair.json  metadata.json  my-keypair.json  package-lock.json  package.json  sig.js  sigOnly.js  sigOnlyAdmin.js  test-connection.js  test-script.js  test.html
backend/: .env.example  Cargo.toml  Signature.txt  patient_seed_map.json
backend/src/: app_state.rs  config.rs  controllers.rs  error.rs  grep.txt  lib.rs  main.rs  models.rs  routes.rs  services.rs  utils.rs
backend/src/config/: config.rs
backend/src/controllers/: controllers.rs
backend/src/middleware/: jwt.rs
backend/src/models/: models.rs
backend/src/routes/: routes.rs
programs/medical-record-solana/: Cargo.toml
programs/medical-record-solana/src/: lib.rs
tests/: execute.js  medical-record-solana.ts
