[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-web = "4.10.2"
bs58 = "0.5.1"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


solana-sdk = "2.2.1"
solana-client = "2.2.2"
solana-program = "2.2.0"
solana-account-decoder = "2.2.2"
anchor-client = "0.31.0"
anchor-lang = "0.31.0"
mutex = "1.0.0"

chrono = "0.4"

env_logger = "0.11.5"
log = "0.4.22"
