[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-web = "4.10.2"
actix-web-httpauth = "0.8.2" # For JWT middleware
bs58 = "0.5.1"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "2.2.1"
solana-client = "2.2.2"
solana-program = "2.2.0"
solana-account-decoder = "2.2.2"
anchor-client = "0.31.0"
anchor-lang = "0.31.0"
mutex = "1.0.0"
chrono = "0.4"
env_logger = "0.11.5"
log = "0.4.22"
base64 = "0.22.1"
bincode = "1.3.3"
tokio = { version = "1.40.0", features = ["time"] } # For retry logic
thiserror = "1.0"
futures-util = "0.3"
borsh = "1.5.5"